objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accenture_Field__c</fullName>
        <label>Accenture Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AirBerlin_Text_Field__c</fullName>
        <label>AirBerlin Text Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alm_Brand_Mock_Field__c</fullName>
        <label>Alm Brand Mock Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atos_Field__c</fullName>
        <label>Atos Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CBM_Testing_Field__c</fullName>
        <label>BP CBM Testing Field</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_Testing_Field__c</fullName>
        <label>BP Testing Field</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Promote_Test__c</fullName>
        <label>Back Promote Test</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Berner_Group__c</fullName>
        <label>Berner Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBM_init_field__c</fullName>
        <label>CBM init field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CocaCola_Custom_Field__c</fullName>
        <label>CocaCola Custom Field</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_BP_Test__c</fullName>
        <label>Copado BP Test</label>
        <length>199</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Leaks__c</fullName>
        <label>Copado Leaks</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copado_Test_Field__c</fullName>
        <label>Copado Test Field</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cox_Automotive_Demo_Field__c</fullName>
        <label>Cox Automotive Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cristina_Field__c</fullName>
        <label>Cristina Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cynosure_custom_field__c</fullName>
        <label>Cynosure custom field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deloitte_CBM__c</fullName>
        <label>Deloitte CBM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deloitte_Text_Field__c</fullName>
        <label>Deloitte Text Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deloitte_US__c</fullName>
        <label>Deloitte US</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deltek__c</fullName>
        <description>This is a custom field for the demo</description>
        <inlineHelpText>Help!!</inlineHelpText>
        <label>Deltek</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Field__c</fullName>
        <label>Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easter_Demo_Field__c</fullName>
        <label>Easter Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_1_Release_1__c</fullName>
        <label>Field_1_Release_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2_Release_1__c</fullName>
        <label>Field_2_Release_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GGP_Demo_Field__c</fullName>
        <label>GGP Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GraphiteRx_Demo_Field__c</fullName>
        <label>GraphiteRx Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hello_Dreamforce__c</fullName>
        <label>Hello Dreamforce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Bank_Field__c</fullName>
        <label>Key Bank Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metso_CCM_CBM_Demo__c</fullName>
        <label>Metso CCM CBM Demo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metso_Demo_Field__c</fullName>
        <label>Metso Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MockField__c</fullName>
        <label>MockField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_Text__c</fullName>
        <label>Mock Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monster_Field__c</fullName>
        <label>Monster Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTS_Field__c</fullName>
        <label>NTS Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Custom_Field_PoC__c</fullName>
        <label>New Custom Field PoC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newell_Field__c</fullName>
        <label>Newell Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Way_Jose__c</fullName>
        <label>No Way Jose</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_in_DEV__c</fullName>
        <label>Not in DEV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Only_Git__c</fullName>
        <label>Only Git</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preludsys_Demo_Field__c</fullName>
        <label>Preludsys Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rajiv_Text_Field__c</fullName>
        <label>Rajiv Text Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Demo_Field__c</fullName>
        <label>Salesforce Demo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Kone__c</fullName>
        <label>Salesforce-Kone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sergey_Demo__c</fullName>
        <label>Sergey Demo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sergio_and_Hugo_Field__c</fullName>
        <label>Sergio and Hugo Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sony_Demo_Field__c</fullName>
        <description>Fake Description</description>
        <label>Sony Demo Field</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefonica_Field__c</fullName>
        <label>Telefonica Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telstra_Field__c</fullName>
        <label>Telstra Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theres_no_way_back__c</fullName>
        <label>Theres no way back</label>
        <length>66</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransAmerica_Custom_Field__c</fullName>
        <label>TransAmerica Custom Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>